[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/interface.gd" type="Script" id=1]
[ext_resource path="res://scenes/NeuralNetwork.tscn" type="PackedScene" id=2]

[node name="interface" type="Node2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 220.0
margin_top = 40.0
margin_right = 380.0
margin_bottom = 60.0
text = "label"

[node name="Label8" type="Label" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 380.0
margin_bottom = 40.0
text = "label"

[node name="Label2" type="Label" parent="."]
margin_left = 220.0
margin_top = 60.0
margin_right = 380.0
margin_bottom = 80.0
text = "label"

[node name="Label3" type="Label" parent="."]
margin_left = 220.0
margin_top = 80.0
margin_right = 380.0
margin_bottom = 100.0
text = "label"

[node name="Label4" type="Label" parent="."]
margin_left = 220.0
margin_top = 100.0
margin_right = 380.0
margin_bottom = 120.0
text = "label"

[node name="Label5" type="Label" parent="."]
margin_left = 220.0
margin_top = 120.0
margin_right = 380.0
margin_bottom = 140.0
text = "label"

[node name="Label6" type="Label" parent="."]
margin_left = 220.0
margin_top = 140.0
margin_right = 380.0
margin_bottom = 160.0
text = "label"

[node name="Label7" type="Label" parent="."]
margin_left = 220.0
margin_top = 160.0
margin_right = 380.0
margin_bottom = 180.0
text = "label"

[node name="test" type="Button" parent="."]
margin_left = 220.0
margin_top = 180.0
margin_right = 280.0
margin_bottom = 200.0
text = "TEST"

[node name="new" type="Button" parent="."]
margin_left = 300.0
margin_top = 150.0
margin_right = 360.0
margin_bottom = 170.0
text = "NEW"

[node name="slow" type="Button" parent="."]
margin_left = 300.0
margin_top = 210.0
margin_right = 360.0
margin_bottom = 230.0
text = "SLOW"

[node name="stop" type="Button" parent="."]
margin_left = 220.0
margin_top = 210.0
margin_right = 280.0
margin_bottom = 230.0
text = "STOP"

[node name="load_weights" type="Button" parent="."]
margin_left = 300.0
margin_top = 180.0
margin_right = 360.0
margin_bottom = 200.0
text = "LOAD"

[node name="NeuralNetwork" parent="." instance=ExtResource( 2 )]
hidden_layers = [ 100 ]
output_units = 5
learning_rate = 0.5

[node name="container" type="Node2D" parent="."]
position = Vector2( 40, 40 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="button_up" from="test" to="." method="_on_test_button_up"]
[connection signal="button_up" from="new" to="." method="_on_new_button_up"]
[connection signal="button_up" from="slow" to="." method="_on_slow_button_up"]
[connection signal="button_up" from="stop" to="." method="_on_stop_button_up"]
[connection signal="button_up" from="load_weights" to="." method="_on_load_weights_button_up"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
